--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-    "name": "polyflow-auto-bot",
-    "version": "1.0.0",
-    "description": "Automatically generate and submit invoices to the Polyflow Scan2Earn platform",
-    "main": "index.js",
-    "scripts": {
+  "name": "polyflow-auto-bot",
+  "version": "1.0.0",
+  "description": "Automatically generate and submit invoices to the Polyflow Scan2Earn platform",
+  "main": "index.js",
+  "scripts": {
       "start": "node index.js",
       "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
+  },
+  "repository": {
       "type": "git",
       "url": "git+https://github.com/airdropinsiders/Polyflow-Auto-Bot.git"
-    },
-    "keywords": [
+  },
+  "keywords": [
       "polyflow",
       "airdrop",
       "automation",
       "crypto",
       "scan2earn"
-    ],
-    "author": "Airdrop Insiders",
-    "license": "MIT",
-    "bugs": {
+  ],
+  "author": "Airdrop Insiders",
+  "license": "MIT",
+  "bugs": {
       "url": "https://github.com/airdropinsiders/Polyflow-Auto-Bot/issues"
-    },
-    "homepage": "https://github.com/airdropinsiders/Polyflow-Auto-Bot#readme",
-    "dependencies": {
+  },
+  "homepage": "https://github.com/airdropinsiders/Polyflow-Auto-Bot#readme",
+  "dependencies": {
       "axios": "^1.6.2",
       "canvas": "^2.11.2",
       "chalk": "^4.1.2",
       "dotenv": "^16.3.1",
       "https-proxy-agent": "^7.0.2",
+      "node-schedule": "^2.1.1",
       "readline-sync": "^1.4.10"
-    }
   }
+}
